--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-     <h1>АО «Почта России»<h1>  
+     <h1>АО «Почта России»</h1>  
      <p>Тел.: +7 (495) 956-20-67</p>
 </body>
 
